# solana-rust-sdk-demo

./: Cargo.toml  README.md
src/: airdrop.rs  connection.rs  readkeypair.rs  transfer_sol.rs
